--- a/common/代理相关.md
+++ b/common/代理相关.md
@@ -35,4 +35,5 @@ curl http://www.google.com
 ENV http_proxy http://192.168.1.60:7890
 ENV https_proxy http://192.168.1.60:7890
 
-
+ENV http_proxy http://192.168.99.200:7890
+ENV https_proxy http://192.168.1.200:7890
