代码块格式变更

--- a/python/人脸识别算法对比.md
+++ b/python/人脸识别算法对比.md
@@ -30,7 +30,7 @@ https://stackoverflow.com/questions/52383577/installing-ms-c-14-0-for-python-wit
 
 ### demo示例
 
-```
+```python
 
 app = FaceAnalysis(providers=['CUDAExecutionProvider', 'CPUExecutionProvider'])
 app.prepare(ctx_id=0, det_size=(640, 640))
@@ -47,6 +47,7 @@ def validate_face_info(img_frame):
      
 
 
+# 面部实时检测 stream_url 为0表示本地摄像头
 def face_detect_time():
     cap = cv2.VideoCapture(stream_url)
     if not cap.isOpened():
