增加模型自定义路径

--- a/python/人脸识别算法对比.md
+++ b/python/人脸识别算法对比.md
@@ -32,7 +32,8 @@ https://stackoverflow.com/questions/52383577/installing-ms-c-14-0-for-python-wit
 
 ```python
 
-app = FaceAnalysis(providers=['CUDAExecutionProvider', 'CPUExecutionProvider'])
+# 默认buffalo_l  自己下载 antelopev2后解压
+app = FaceAnalysis(root="./models/",providers=['CUDAExecutionProvider', 'CPUExecutionProvider'],name="antelopev2")
 app.prepare(ctx_id=0, det_size=(640, 640))
 
 
@@ -67,6 +68,15 @@ def face_detect_time():
                 continue
             face_img_name = datetime.datetime.now().strftime("%Y%m%d") + "_" + str(uuid.uuid4()) + ".jpg"
             cv2.imwrite("./images/detect/"+face_img_name, face_img)
+
+
+
+
+
+
+
+
+
 
 if __name__ == '__main__':
 	face_detect_time()
