--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -90,13 +90,18 @@ docker run  -p 19006:3306 --restart=always --name mysql5.7 -v /home/mysql/conf/m
 
 ## nginxwebui
 
-> docker pull cym1102/nginxwebui:latest
-> docker run --restart=always -itd -v /home/nginxWebUI:/home/nginxWebUI -e BOOT_OPTIONS="--server.port=16080" --privileged=true --net=host cym1102/nginxwebui:latest
-docker run --restart=always -itd -v /home/nginxWebUI:/home/nginxWebUI -e BOOT_OPTIONS="--server.port=19007" --privileged=true --net=host cym1102/nginxwebui:3.4.6
+```shell
+docker pull cym1102/nginxwebui:latest
+docker run --restart=always -itd -v /home/nginxWebUI:/home/nginxWebUI -e BOOT_OPTIONS="--server.port=16080" --privileged=true --net=host cym1102/nginxwebui:latest
+docker run --restart=always -itd -v /home/nginxWebUI:/home/nginxWebUI -e BOOT_OPTIONS="--server.port=19007" --privileged=true --net=host cym1102/nginxwebui:3.7.3
+```
+
 ## openjdk
 
+```shell
 docker pull openjdk:11
 docker pull openjdk:8-jdk
+```
 
 ## uptime
 docker pull louislam/uptime-kuma:1.19.6
