--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -39,8 +39,8 @@ docker run --restart=always -d -v /home/srs5/conf/:/usr/local/srs/conf/ -p 1935:
 ## mysql
 ```sh
 docker pull mysql:5.7
-mkdir -p /mysql/data   /mysql/logs  /mysql/conf
-cd /mysql/conf
+mkdir -p /home/mysql/data   /home/mysql/logs  /home/mysql/conf
+cd /home/mysql/conf
 touch my.cnf
 vi my.cnf
 # Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
@@ -84,7 +84,8 @@ sql_mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_
 
 
 ------------------启动命令---------------------
-docker run  -p 19006:3306 --restart=always --name mysql5.7 -v /home/mysql/conf/my.cnf:/etc/mysql/my.cnf -v /home/mysql/logs:/logs -v /home/mysql/mysql:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=cb@83264 -d mysql:5.7
+docker run  -p 13006:3306 --restart=always --name mysql5.7 -v /home/mysql/conf/my.cnf:/etc/mysql/my.cnf -v /home/mysql/logs:/logs -v /home/mysql/mysql:/var/lib/mysql -e MYSQL_ROOT_PASSWORD=cb@83264 -d mysql:5.7
+
 
 ```
 
