--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -126,3 +126,10 @@ https://github.com/PaddlePaddle/PaddleSpeech/blob/develop/README_cn.md
 
 ## 虚拟人
 https://aistudio.baidu.com/aistudio/projectdetail/3345856
+
+
+## 快速部署 fastdeploy
+
+[FastDeploy](https://github.com/PaddlePaddle/FastDeploy)
+
+
