--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -132,4 +132,7 @@ https://aistudio.baidu.com/aistudio/projectdetail/3345856
 
 [FastDeploy](https://github.com/PaddlePaddle/FastDeploy)
 
+## 各平台编译 fastdeploy
+https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_install/
+
 
