--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -136,3 +136,20 @@ https://aistudio.baidu.com/aistudio/projectdetail/3345856
 https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_install/
 
 
+## 编译 rknn平台的时候
+如果遇到 fastdeploy 指定找不到opencv的路径，则需要执行 下面
+
+使用以下命令行查找包含共享库libopencv_core.so.4.2的文件夹。
+```
+sudo find / -name "libopencv_core.so.4.2*"
+```
+然后我得到结果：/usr/local/lib/libopencv_core.so.4.2。
+2. 创建一个名为`/etc/ld.so.conf.d/opencv.conf`的文件，并将存储二进制文件的文件夹路径写入其中。例如，我将`/usr/local/lib/`写入我的`opencv.conf`文件。
+3. 按如下方式运行命令行。
+```
+sudo ldconfig -v
+```
+之后进行重新编译，重新安装whl包，基础教程链接：https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_install/rknpu2.md
+
+
+
