--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -135,6 +135,10 @@ https://aistudio.baidu.com/aistudio/projectdetail/3345856
 ## 各平台编译 fastdeploy
 https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_install/
 
+## rknn-npu系列教程
+
+https://wiki.t-firefly.com/zh_CN/Core-3588J/usage_fastdeploy.html
+
 
 ## 编译 rknn平台的时候
 如果遇到 fastdeploy 指定找不到opencv的路径，则需要执行 下面
