--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -1,4 +1,4 @@
-## github 
+## 官网Git地址 
 > https://github.com/PaddlePaddle/PaddleNLP
 
 
@@ -21,6 +21,9 @@ pip install --upgrade paddlenlp>=2.0.0rc -i https://pypi.tuna.tsinghua.edu.cn/si
 
 ```
 
+## 模型转换
+
+https://github.com/PaddlePaddle/PaddleOCR/blob/release/2.7/deploy/paddle2onnx/readme.md
 
 ## 检查paddle安装是否成功
 > 
