--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -140,6 +140,7 @@ https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_instal
 
 ## rknn-npu系列教程
 
+paddle ocr https://github.com/PaddlePaddle/PaddleOCR/tree/ad0d5e252692fa8e8c7795933c74058251f076da/deploy/fastdeploy/rockchip/python
 https://wiki.t-firefly.com/zh_CN/Core-3588J/usage_fastdeploy.html
 
 
