--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -139,12 +139,10 @@ https://aistudio.baidu.com/aistudio/projectdetail/3345856
 https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_install/
 
 ## rknn-npu系列教程
+onnx2rknn 导出需要到linux环境 借助 [FastDeploy RKNPU2推理环境搭建](https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/faq/rknpu2/environment.md)
+[paddleOcr rknn教程](https://github.com/PaddlePaddle/PaddleOCR/tree/ad0d5e252692fa8e8c7795933c74058251f076da/deploy/fastdeploy/rockchip/python)
 
-paddle ocr https://github.com/PaddlePaddle/PaddleOCR/tree/ad0d5e252692fa8e8c7795933c74058251f076da/deploy/fastdeploy/rockchip/python
-https://wiki.t-firefly.com/zh_CN/Core-3588J/usage_fastdeploy.html
-
-
-## 编译 rknn平台的时候
+## FastDeploy rknn 环境搭建
 如果遇到 fastdeploy 指定找不到opencv的路径，则需要执行 下面
 
 使用以下命令行查找包含共享库libopencv_core.so.4.2的文件夹。
@@ -157,7 +155,8 @@ sudo find / -name "libopencv_core.so.4.2*"
 ```
 sudo ldconfig -v
 ```
-之后进行重新编译，重新安装whl包，基础教程链接：https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_install/rknpu2.md
-
-
+之后进行重新编译，重新安装whl包，
+基础教程链接：
+[FastDeploy RKNPU2推理环境搭建](https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_install/rknpu2.md)
+https://wiki.t-firefly.com/zh_CN/Core-3588J/usage_fastdeploy.html
 
