--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -135,6 +135,10 @@ https://aistudio.baidu.com/aistudio/projectdetail/3345856
 
 [FastDeploy](https://github.com/PaddlePaddle/FastDeploy)
 
+## rknn工具地址
+
+https://github.com/rockchip-linux/rknn-toolkit2
+
 ## 各平台编译 fastdeploy
 https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_install/
 
@@ -158,5 +162,7 @@ sudo ldconfig -v
 之后进行重新编译，重新安装whl包，
 基础教程链接：
 [FastDeploy RKNPU2推理环境搭建](https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_install/rknpu2.md)
+
+
 https://wiki.t-firefly.com/zh_CN/Core-3588J/usage_fastdeploy.html
 
