--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -144,6 +144,8 @@ https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_instal
 
 ## rknn-npu系列教程
 onnx2rknn 导出需要到linux环境 借助 [FastDeploy RKNPU2推理环境搭建](https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/faq/rknpu2/environment.md)
+
+## PaddleOCR to rknn教程
 [paddleOcr rknn教程](https://github.com/PaddlePaddle/PaddleOCR/tree/ad0d5e252692fa8e8c7795933c74058251f076da/deploy/fastdeploy/rockchip/python)
 
 ## FastDeploy rknn 环境搭建
