--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -21,9 +21,6 @@ pip install --upgrade paddlenlp>=2.0.0rc -i https://pypi.tuna.tsinghua.edu.cn/si
 
 ```
 
-## 模型转换
-
-https://github.com/PaddlePaddle/PaddleOCR/blob/release/2.7/deploy/paddle2onnx/readme.md
 
 ## 检查paddle安装是否成功
 > 
@@ -142,7 +139,13 @@ https://github.com/rockchip-linux/rknn-toolkit2
 ## 各平台编译 fastdeploy
 https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/build_and_install/
 
+## Paddle 转 onnx
+
+https://github.com/PaddlePaddle/PaddleOCR/blob/release/2.7/deploy/paddle2onnx/readme.md
+
+
 ## rknn-npu系列教程
+paddle 导出到 onnx模型按照这个 [Paddle 转 onnx](https://github.com/PaddlePaddle/PaddleOCR/blob/release/2.7/deploy/paddle2onnx/readme.md)
 onnx2rknn 导出需要到linux环境 借助 [FastDeploy RKNPU2推理环境搭建](https://github.com/PaddlePaddle/FastDeploy/blob/develop/docs/cn/faq/rknpu2/environment.md)
 
 ## PaddleOCR to rknn教程
