--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -20,7 +20,7 @@ docker run -d --restart=always --name prod-minio \
   -p 19000:9000 -p 19001:9001 -v /home/minio/data:/data minio/minio server /data --console-address ":9001"
 ```
 
-## srs
+## srs 5.0.30
 
 > 启动成功后访问服务器ip+8085成功
 
@@ -31,10 +31,29 @@ docker cp -a srs:/usr/local/srs/conf /home/srs5/
 docker rm -f srs
 ## 重启，linux输入下面命令记得替换x.x.x.x为当前服务器IP
 CANDIDATE="192.168.1.33"
-docker run --restart=always -d -v /home/srs5/conf/:/usr/local/srs/conf/ -p 1935:1935 -p 1985:1985 -p 8085:8080 \
+docker run --restart=always -d --name srs -v /home/srs5/conf/:/usr/local/srs/conf/ -p 1935:1935 -p 1985:1985 -p 8085:8080 \
     --env CANDIDATE=$CANDIDATE -p 8000:8000/udp \
     ossrs/srs:5.0.30 ./objs/srs -c conf/docker.conf
 ```
+
+## srs 5.0.200
+
+> 启动成功后访问服务器ip+8085成功
+
+```
+docker run -d --name srs -p 1935:1935 -p 1985:1985 -p 8085:8080 ossrs/srs:5.0.200
+## 拷贝配置
+mkdir /home/srs5
+docker cp -a srs:/usr/local/srs/conf/docker.conf /home/srs5/
+docker rm -f srs
+
+## 重启，linux输入下面命令记得替换x.x.x.x为当前服务器IP
+CANDIDATE="192.168.1.33"
+docker run --restart=always -d --name srs -v /home/srs5/docker.conf:/usr/local/srs/conf/docker.conf -p 1935:1935 -p 1985:1985 -p 8085:8080 \
+    --env CANDIDATE=$CANDIDATE -p 8000:8000/udp \
+    ossrs/srs:5.0.30 ./objs/srs -c conf/docker.conf
+```
+
 
 ## mysql
 ```sh
