--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -2,6 +2,9 @@
 
 ```
 docker run -d --restart=always --name inner-jenkins -p 8899:8080 -p 50000:50000 --privileged=true  -v /home/jenkins_home:/var/jenkins_home     jenkins/jenkins:2.375-jdk11
+-------指定path
+docker run -d --restart=always --name inner-jenkins -p 8899:8080 -p 50000:50000 --privileged=true --env JENKINS_OPTS="--prefix=/jenins222"  -v /home/jenkins_home:/var/jenkins_home     jenkins/jenkins:jdk17
+
 ```
 
 ## redis
