--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -57,6 +57,21 @@ docker run --restart=always -d --name srs -v /home/srs5/docker.conf:/usr/local/s
     ossrs/srs:5.0.30 ./objs/srs -c conf/docker.conf
 ```
 
+## srs-srt
+
+```
+docker run -d --name srs -p 1935:1935 -p 1985:1985 -p 8085:8080 ossrs/srs:5.0.200
+mkdir /home/srs5
+docker cp -a srs:/usr/local/srs/conf/srt.conf /home/srs5/
+docker rm -f srs
+
+docker run --rm -it -p 17039:1935 -p 17040:1985 -p 17041:8080 -p 17042:10080/udp  ossrs/srs:5.0.200  ./objs/srs -c conf/srt.conf
+
+---------------------
+RTMP(VLC/ffplay): rtmp://localhost/live/livestream
+HLS by SRS player: http://localhost:8080/live/livestream.flv
+SRT(VLC/ffplay): srt://127.0.0.1:10080?streamid=#!::r=live/livestream,m=request
+```
 
 ## mysql
 ```sh
