--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -65,7 +65,8 @@ mkdir /home/srs5
 docker cp -a srs:/usr/local/srs/conf/srt.conf /home/srs5/
 docker rm -f srs
 
-docker run --rm -it -p 17039:1935 -p 17040:1985 -p 17041:8080 -p 17042:10080/udp  ossrs/srs:5.0.200  ./objs/srs -c conf/srt.conf
+docker run --rm -it -p 17039:1935 -p 17040:1985 -p 17041:8080 -p 17042:10080/udp -v /home/srs5/srt.conf:/usr/local/srs/conf/srt.conf  ossrs/srs:5.0.200  ./objs/srs -c conf/srt.conf
+docker run --rm -it --network=host -v /home/srs5/srt.conf:/usr/local/srs/conf/srt.conf  ossrs/srs:5.0.200  ./objs/srs -c conf/srt.conf
 
 ---------------------
 RTMP(VLC/ffplay): rtmp://localhost/live/livestream
