--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -69,9 +69,13 @@ docker run --rm -it -p 17039:1935 -p 17040:1985 -p 17041:8080 -p 17042:10080/udp
 docker run --rm -it --network=host -v /home/srs5/srt.conf:/usr/local/srs/conf/srt.conf  ossrs/srs:5.0.200  ./objs/srs -c conf/srt.conf
 
 ---------------------
-RTMP(VLC/ffplay): rtmp://localhost/live/livestream
-HLS by SRS player: http://localhost:8080/live/livestream.flv
-SRT(VLC/ffplay): srt://127.0.0.1:10080?streamid=#!::r=live/livestream,m=request
+sss.srt.com.cn 定义在hosts
+直播地址：
+srt://x.x.x.x:17042?streamid=#!::h=sss.srt.com.cn,r=live/123456,m=publish
+
+播放地址：
+srt://x.x.x.x:17042?streamid=#!::h=sss.srt.com.cn,r=live/123456,m=request
+
 ```
 
 ## mysql
