--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -76,6 +76,10 @@ srt://x.x.x.x:17042?streamid=#!::h=sss.srt.com.cn,r=live/123456,m=publish
 播放地址：
 srt://x.x.x.x:17042?streamid=#!::h=sss.srt.com.cn,r=live/123456,m=request
 
+推流：
+ffmpeg -re -i input.mp4 -c copy -pes_payload_size 0 -f mpegts "srt://x.x.x.x:17042?streamid=#!::h=sss.srt.com.cn,r=live/123456,m=publish"
+
+播放：
 ffplay -fflags nobuffer -flags low_delay -i "srt://x.x.x.x:17042?streamid=#!::h=sss.srt.com.cn,r=live/123456,m=request&latency=20"
 
 ```
