--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -84,6 +84,23 @@ ffplay -fflags nobuffer -flags low_delay -i "srt://x.x.x.x:17042?streamid=#!::h=
 
 ```
 
+## srs dvr 开放
+> 对应conf中增加下面 dvr配置
+```
+vhost your_vhost {
+    dvr {
+        enabled         on;
+        dvr_apply       all;
+        dvr_plan        session;
+        dvr_path        ./objs/nginx/html/[app]/[stream].[timestamp].mp4;
+        dvr_duration    30;
+        dvr_wait_keyframe       on;
+        time_jitter             full;
+    }
+}
+
+```
+
 ## mysql
 ```sh
 docker pull mysql:5.7
