--- a/go/基本步骤常用组件.md
+++ b/go/基本步骤常用组件.md
@@ -8,6 +8,7 @@
  - [gl-sqllite](https://github.com/mattn/go-sqlite3)
  - [go原生调用sql]()
  - [webrtc](https://github.com/pion/webrtc/tree/master/examples/pion-to-pion)
+ - [gui-fyne](https://github.com/fyne-io/fyne)
 
 
 ## WEB Demo快速开始
