--- a/python/常用知识.md
+++ b/python/常用知识.md
@@ -155,6 +155,12 @@ Base.metadata.create_all(engine)
 ## 定时任务模块
 > pip install schedule
 
+## gui模块  PySimpleGUI
+
+使用 4版本即可 5版本需要收费授权
+pip install PySimpleGUI==4.60.5
+
+
 ## python webrtc组件 
 
 > https://github.com/aiortc/aiortc
