--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -218,4 +218,34 @@ docker run -d --name code-server -p 17005:8080 \
 
 ```
 
+## 自建内网vpn工具 pritunl
+> https://zhuanlan.zhihu.com/p/614987076
+> https://hub.docker.com/r/jippi/pritunl
+```
+mkdir -p /home/pritunl/
+cd /home/pritunl/
+touch pritunl.conf
+默认web端口 在 443  https
+```
+
+```
+docker run \
+    -d --name pritunl \
+    --privileged \
+    --dns 127.0.0.1 \
+    --network=host \
+    --detach \
+    -v /home/pritunl/pritunl.conf:/etc/pritunl.conf \
+    -v /home/pritunl/mongodb/:/var/lib/mongodb \
+    -v /home/pritunl/pritunl/:/var/lib/pritunl \
+    ghcr.io/jippi/docker-pritunl
+
+--------------查看密码---------------
+docker exec -it pritunl /bin/bash
+pritunl default-password
+```
+
+> 客户端下载和配置 在用户列表第一个链接图标点开可以看到
+
+
 
