--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -247,6 +247,11 @@ pritunl default-password
 
 > 客户端下载和配置 在用户列表第一个链接图标点开可以看到
 > 或者使用 openvpn https://openvpn.net/community-downloads/
+>
+###  注意事项
+ - pritunl 启动的server的端口一定要和公网映射出去的端口一致 （ .ovpn文件可以看到具体连接端口）否则连接不上 假如你的内网 server端口9777，而pritunl配置公网ip为1.2.3.4，那么到时候远程配置中生成的连接地址就是
+remote 1.2.3.4 9777 tcp-client
+
 
 
 
