--- a/python/常用知识.md
+++ b/python/常用知识.md
@@ -166,3 +166,21 @@ pip install PySimpleGUI==4.60.5
 > https://github.com/aiortc/aiortc
 > pip install aiortc -i https://pypi.douban.com/simple
 > 除了基础包之外，如果在干净的服务器需要安装对应的os依赖，各种lib包，详细请看aiortc的readme说明
+
+
+## 查看摄像头名字和索引
+
+```
+pip install pygrabber
+
+from pygrabber.dshow_graph import FilterGraph
+
+def get_camera_info():
+    graph = FilterGraph()
+    devices = graph.get_input_devices()
+
+    for index, device in enumerate(devices):
+        print(f"Camera {index}: {device}")
+
+get_camera_info()
+```
