--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -23,6 +23,47 @@ docker run -d --restart=always --name prod-minio \
   -p 19000:9000 -p 19001:9001 -v /home/minio/data:/data minio/minio server /data --console-address ":9001"
 ```
 
+## ZLM docker部署
+
+> 端口说明
+> 9000 SRT udp
+> 1935 rtsp
+> 80 http
+> rtc 8000  tcp/udp
+> rtp 10000 tcp/udp
+> rtp-proxy 30000-35000
+> rtsp 554
+
+
+```
+docker pull zlmediakit/zlmediakit:feature-8.0
+docker run -d --name zlmediakit zlmediakit/zlmediakit:feature-8.0
+docker cp -a zlmediakit:/opt/media/conf /home/zlm8/
+docker rm -f zlmediakit
+
+```
+简易版本(http rtmp  rtsp srt rtc  rtp )
+```
+docker run -d --restart=always --name zlmediakit  -p 17050:80  -p 17051:1935 -p 17052:554 -p 17053:9000/udp -p 17054:8000  -p 17054:8000/udp  -p 17055:10000 -p 17055:10000/udp --ip 11.36.27.27 --env MODE=standalone -v /home/zlm8/conf:/opt/media/conf zlmediakit/zlmediakit:feature-8.0
+```
+
+全端口版本
+```
+
+docker run -d -p 17051:1935 -p 17052:80 -p 17053:554 \
+-p 17054:10000 -p 17054:10000/udp -p 17055:8000 -p 17055:8000/udp \
+-p 30000-30500:30000-30500 -p 30000-30500:30000-30500/udp \
+--name zlmediakit \
+--ip 192.168.1.99 \
+--restart=always \
+--env MODE=standalone \
+-e TZ="Asia/Shanghai" \
+-v /home/zlm8/conf:/opt/media/conf \
+zlmediakit/zlmediakit:feature-8.0
+
+
+```
+
 ## srs 5.0.30
 
 > 启动成功后访问服务器ip+8085成功
