--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -47,38 +47,7 @@ docker rm -f zlmediakit
 docker run -d --restart=always --name zlmediakit  -p 17050:80  -p 17051:1935 -p 17052:554 -p 17053:9000/udp -p 17054:8000  -p 17054:8000/udp  -p 17055:10000 -p 17055:10000/udp --ip 11.36.27.27 --env MODE=standalone -v /home/zlm8/conf:/opt/media/conf zlmediakit/zlmediakit:feature-8.0
 ```
 
-全端口版本
-```
 
-docker run -d -p 17051:1935 -p 17052:80 -p 17053:554 \
--p 17054:10000 -p 17054:10000/udp -p 17055:8000 -p 17055:8000/udp \
--p 30000-30500:30000-30500 -p 30000-30500:30000-30500/udp \
---name zlmediakit \
---ip 192.168.1.99 \
---restart=always \
---env MODE=standalone \
--e TZ="Asia/Shanghai" \
--v /home/zlm8/conf:/opt/media/conf \
-zlmediakit/zlmediakit:feature-8.0
-
-
-```
-
-## srs 5.0.30
-
-> 启动成功后访问服务器ip+8085成功
-
-```
-docker run -d --name srs -p 1935:1935 -p 1985:1985 -p 8085:8080 ossrs/srs:5.0.30
-## 拷贝配置
-docker cp -a srs:/usr/local/srs/conf /home/srs5/
-docker rm -f srs
-## 重启，linux输入下面命令记得替换x.x.x.x为当前服务器IP
-CANDIDATE="192.168.1.33"
-docker run --restart=always -d --name srs -v /home/srs5/conf/:/usr/local/srs/conf/ -p 1935:1935 -p 1985:1985 -p 8085:8080 \
-    --env CANDIDATE=$CANDIDATE -p 8000:8000/udp \
-    ossrs/srs:5.0.30 ./objs/srs -c conf/docker.conf
-```
 
 ## srs 5.0.200
 
@@ -96,6 +65,7 @@ CANDIDATE="192.168.1.33"
 docker run --restart=always -d --name srs -v /home/srs5/docker.conf:/usr/local/srs/conf/docker.conf -p 1935:1935 -p 1985:1985 -p 8085:8080 \
     --env CANDIDATE=$CANDIDATE -p 8000:8000/udp \
     ossrs/srs:5.0.200 ./objs/srs -c conf/docker.conf
+
 ```
 
 ## srs-srt
@@ -106,7 +76,7 @@ mkdir /home/srs5
 docker cp -a srs:/usr/local/srs/conf/srt.conf /home/srs5/
 docker rm -f srs
 
-docker run --rm -it -p 17039:1935 -p 17040:1985 -p 17041:8080 -p 17042:10080/udp -v /home/srs5/srt.conf:/usr/local/srs/conf/srt.conf  ossrs/srs:5.0.200  ./objs/srs -c conf/srt.conf
+docker run --rm -it -p 17039:1935 -p 17040:1985 -p 17041:8080 -p 17042:10080/udp  -v /home/srs5/srt.conf:/usr/local/srs/conf/srt.conf  ossrs/srs:5.0.200  ./objs/srs -c conf/srt.conf
 docker run --rm -it --network=host -v /home/srs5/srt.conf:/usr/local/srs/conf/srt.conf  ossrs/srs:5.0.200  ./objs/srs -c conf/srt.conf
 
 ---------------------
@@ -122,6 +92,19 @@ ffmpeg -re -i input.mp4 -c copy -pes_payload_size 0 -f mpegts "srt://x.x.x.x:170
 
 播放：
 ffplay -fflags nobuffer -flags low_delay -i "srt://x.x.x.x:17042?streamid=#!::h=sss.srt.com.cn,r=live/123456,m=request&latency=20"
+
+```
+
+## srs srt2rtc
+
+```
+docker cp -a srs:/usr/local/srs/conf/srt2rtc.conf /home/srs5/
+docker rm -f srs
+docker run -d --restart=always --name srs -p 17039:1935 -p 17040:1985 -p 17041:8080 -p 17042:10080/udp -p 8000:8000/udp --env CANDIDATE=x.x.x.x -v /home/srs5/srt2rtc.conf:/usr/local/srs/conf/srt2rtc.conf  ossrs/srs:5.0.200  ./objs/srs -c conf/srt2rtc.conf
+
+
+
+
 
 ```
 
