--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -66,6 +66,7 @@ docker run --restart=always -d --name srs -v /home/srs5/docker.conf:/usr/local/s
     --env CANDIDATE=$CANDIDATE -p 8000:8000/udp \
     ossrs/srs:5.0.200 ./objs/srs -c conf/docker.conf
 
+
 ```
 
 ## srs-srt
@@ -103,6 +104,9 @@ docker rm -f srs
 docker run -d --restart=always --name srs -p 17039:1935 -p 17040:1985 -p 17041:8080 -p 17042:10080/udp -p 8000:8000/udp --env CANDIDATE=x.x.x.x -v /home/srs5/srt2rtc.conf:/usr/local/srs/conf/srt2rtc.conf  ossrs/srs:5.0.200  ./objs/srs -c conf/srt2rtc.conf
 
 
+------rtmp flv低延迟-------
+docker run --restart=always -d --name srs-realflv -p 17039:1935 -p 17040:1985 -p 17041:8080 \
+    ossrs/srs:5.0.200 ./objs/srs -c conf/realtime.flv.conf
 
 
 
