--- a/python/百度飞桨.md
+++ b/python/百度飞桨.md
@@ -173,3 +173,11 @@ sudo ldconfig -v
 
 https://wiki.t-firefly.com/zh_CN/Core-3588J/usage_fastdeploy.html
 
+
+## onnx可视化
+
+```
+pip install visualdl
+
+visualdl --host 0.0.0.0
+```
