--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -129,6 +129,17 @@ vhost your_vhost {
 
 ```
 
+## media-server-srs
+
+```
+docker run -d --name srs -p 17041:1935 -p 17042:1985 -p 17043:8080 -p 8000:8000/udp --env CANDIDATE=$(ifconfig eth0|grep 'inet '|awk '{print $2}') sucwangsr/media-server-srs:amd64-v1 ./objs/srs -c conf/docker.conf
+
+---或者下面自定义设置 
+CANDIDATE=x.x.x.x
+docker run -d  --name srs -p 17051:1935 -p 17052:1985 -p 17053:8080 -p 8000:8000/udp --env CANDIDATE=$CANDIDATE  sucwangsr/media-server-srs:amd64-v1 ./objs/srs -c conf/docker.conf
+
+```
+
 ## mysql
 ```sh
 docker pull mysql:5.7
