--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -292,5 +292,17 @@ pritunl default-password
 remote 1.2.3.4 9777 tcp-client
 
 
+## neo4j
+
+```
+docker run \
+    --name neo4j \
+    -p 17474:7474 -p 17687:7687 \
+    -d \
+    -e NEO4J_AUTH=neo4j/pleaseletmein \
+    -e NEO4J_PLUGINS=\[\"apoc\"\]  \
+    neo4j:latest
+```
+
 
 
