--- a/common/流媒体相关.md
+++ b/common/流媒体相关.md
@@ -22,8 +22,14 @@ https://zlmediakit.com/
 
 ## mediamtx
 
-》 推拉流
+###  SRT推拉流
 ```
 ffmpeg -re -i input.mp4 -c:v h264 -c:a aac  -f mpegts  "srt://localhost:8890?streamid=publish:s1001&pkt_size=1316"
 ffplay ffplay "srt://localhost:8890?streamid=read:s1001&pkt_size=1316"
+```
+
+### RTSP推流
+```
+ffmpeg -re -stream_loop -1 -i in1.mp4 -c:v copy -c:a aac -f rtsp rtsp://localhost:8554/10001
+
 ```
