--- a/common/流媒体相关.md
+++ b/common/流媒体相关.md
@@ -22,6 +22,11 @@ https://zlmediakit.com/
 
 ## mediamtx
 
+```
+docker run -d --name media-server --restart=always -p 19350:1935 -p 18890:8890 bluenviron/mediamtx:1.8.3
+
+```
+
 ###  SRT推拉流
 ```
 ffmpeg -re -i input.mp4 -c:v h264 -c:a aac  -f mpegts  "srt://localhost:8890?streamid=publish:s1001&pkt_size=1316"
