--- a/common/流媒体相关.md
+++ b/common/流媒体相关.md
@@ -23,7 +23,7 @@ https://zlmediakit.com/
 ## mediamtx
 
 ```
-docker run -d --name media-server --restart=always -p 19350:1935 -p 18890:8890/udp bluenviron/mediamtx:1.8.3
+docker run -d --name media-server -v /home/mediamtx.yml:/mediamtx.yml  -v ./record:/recordings --restart=always -p 19350:1935 -p 18890:8890/udp bluenviron/mediamtx:1.8.3
 
 ```
 
