--- a/python/图像处理.md
+++ b/python/图像处理.md
@@ -5,3 +5,9 @@ https://github.com/megvii-research/nafnet
 
 ## 其他
 https://github.com/axinc-ai/ailia-models
+
+
+## 背景去除模型 RMBG-1.4
+
+https://huggingface.co/briaai/RMBG-1.4
+
