--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -5,6 +5,13 @@ docker run -d --restart=always --name inner-jenkins -p 8899:8080 -p 50000:50000 
 -------指定path
 docker run -d --restart=always --name inner-jenkins -p 8899:8080 -p 50000:50000 --privileged=true --env JENKINS_OPTS="--prefix=/jenins222"  -v /home/jenkins_home:/var/jenkins_home     jenkins/jenkins:jdk17
 
+----------如果想要宿主机的docker 则挂载即可-------------
+
+-v /usr/bin/docker:/usr/bin/docker
+
+-v /var/run/docker.sock:/var/run/docker.sock
+
+
 ```
 
 ## redis
