--- a/common/流媒体相关.md
+++ b/common/流媒体相关.md
@@ -38,3 +38,14 @@ ffplay ffplay "srt://localhost:8890?streamid=read:s1001&pkt_size=1316"
 ffmpeg -re -stream_loop -1 -i in1.mp4 -c:v copy -c:a aac -f rtsp rtsp://localhost:8554/10001
 ffmpeg -f gdigrab -framerate 30 -s 1280x720 -i desktop -c:v libx264 -preset ultrafast -b:v 600k -max_muxing_queue_size 1024 -g 30 -f rtsp rtsp://127.0.0.1:8554/123456
 ```
+
+### 启动运行ffmpeg yaml配置
+
+```
+paths:
+  cam01:
+    runOnInit: ffmpeg -f gdigrab -framerate 30 -s 1280x720 -i desktop -c:v libx264 -preset ultrafast -b:v 600k -max_muxing_queue_size 1024 -g 30 -f rtsp rtsp://localhost:$RTSP_PORT/$MTX_PATH
+    runOnInitRestart: yes
+```
+
+>`$MTX_PATH`为当前路径 即 cam01，如果自定义比如 9999，则表示向推流码9999推流  利用这个可以relay别的地址
