--- a/python/常用知识.md
+++ b/python/常用知识.md
@@ -184,3 +184,28 @@ def get_camera_info():
 
 get_camera_info()
 ```
+
+## 网页工具JupyterLab
+
+> 配置修改
+```
+## 生成配置文件
+jupyter notebook --generate-config
+vim ~/.jupyter/jupyter_notebook_config.py
+修改或者直接新增下面配置 之前的配置是#注释的
+c.ServerApp.ip = '*' # 开启所有的IP访问，即可使用远程访问
+c.ServerApp.port = 18000  # 设置端口
+c.ServerApp.open_browser = False # 关闭启动后的自动开启浏览器
+c.ServerApp.root_dir = '/home/data_fs_sda1/wjl-workspace'
+c.ServerApp.password_required = False
+c.ServerApp.password = ''
+
+```
+
+> 启动
+```
+pip install jupyterlab
+jupyter lab
+## 每次启动看日志有个带token的地址
+
+```
