--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -266,7 +266,9 @@ docker run -d --name code-server -p 17005:8080 \
 
 ## 自建内网vpn工具 pritunl
 > https://zhuanlan.zhihu.com/p/614987076
+> 
 > https://hub.docker.com/r/jippi/pritunl
+> 
 > https://www.cnblogs.com/panwenbin-logs/p/17684987.html  教程
 ```
 mkdir -p /home/pritunl/
@@ -296,8 +298,9 @@ pritunl default-password
 > 或者使用 openvpn https://openvpn.net/community-downloads/
 >
 ###  注意事项
- >  pritunl 启动的server的端口一定要和公网映射出去的端口一致 （ .ovpn文件可以看到具体连接端口）否则连接不上 假如你的内网 server端口9777，而pritunl配置公网ip为1.2.3.4，那么到时候远程配置中生成的连接地址就是
+ - pritunl 启动的server的端口一定要和公网映射出去的端口一致 （ .ovpn文件可以看到具体连接端口）否则连接不上 假如你的内网 server端口9777，而pritunl配置公网ip为1.2.3.4，那么到时候远程配置中生成的连接地址就是
 remote 1.2.3.4 9777 tcp-client
+ - Server Settings 中注意配置是TCP还是UDP，如果内网部署了上述server，通过frp的TCP映射出去，则需要确定是TCP还是UDP
 
 
 ## neo4j
