--- a/common/流媒体相关.md
+++ b/common/流媒体相关.md
@@ -27,6 +27,14 @@ docker run -d --name media-server -v /home/mediamtx.yml:/mediamtx.yml  -v ./reco
 
 ```
 
+###  RTC推流 
+
+> 1.最新版obs  选择whip 地址填写：http://192.x.x.x:8889/1001/whip
+> 2. http://192.x.x.x:8889/100999/publish
+
+> 1.拉流：obs拉取回流：用 rtsp
+> 2.浏览器拉流： http://192.x.x.x:8889/【流地址】
+
 ###  SRT推拉流
 ```
 ffmpeg -re -i input.mp4 -c:v h264 -c:a aac  -f mpegts  "srt://localhost:8890?streamid=publish:s1001&pkt_size=1316"
