--- a/common/流媒体相关.md
+++ b/common/流媒体相关.md
@@ -3,6 +3,16 @@
 ## SRS
 https://github.com/ossrs/srs
 
+> 自定义静态页挂载
+
+```
+docker run --rm --env CANDIDATE=192.168.31.9 \
+  -v /home/srs5/dist:/usr/local/srs/objs/nginx/html   \
+  -p 1935:1935 -p 8080:8080 -p 1985:1985 -p 8000:8000/udp \
+  registry.cn-hangzhou.aliyuncs.com/ossrs/srs:5 \
+  objs/srs -c conf/rtc.conf
+```
+
 
 ## m7s
 https://m7s.live/
