--- a/common/流媒体相关.md
+++ b/common/流媒体相关.md
@@ -41,7 +41,7 @@ docker run -d --name media-server -v /home/mediamtx.yml:/mediamtx.yml  -v ./reco
 
 > 1.最新版obs  选择whip 地址填写：http://192.x.x.x:8889/1001/whip
 > 
-> 2. http://192.x.x.x:8889/100999/publish
+> 2. 网页推流：http://192.x.x.x:8889/100999/publish
 
 > 1.拉流：obs拉取回流：用 rtsp
 > 
