--- a/common/流媒体相关.md
+++ b/common/流媒体相关.md
@@ -48,10 +48,15 @@ docker run -d --name media-server -v /home/mediamtx.yml:/mediamtx.yml  -v ./reco
 > 2.浏览器拉流： http://192.x.x.x:8889/【流地址】
 
 ###  SRT推拉流
+
+> 如果携带账号密码：`srt://localhost:8890?streamid=publish:mystream:user:pass&pkt_size=1316`
+
 ```
 ffmpeg -re -i input.mp4 -c:v h264 -c:a aac  -f mpegts  "srt://localhost:8890?streamid=publish:s1001&pkt_size=1316"
+
 ffplay ffplay "srt://localhost:8890?streamid=read:s1001&pkt_size=1316"
 ```
+
 
 ### HLS拉流
 
