--- a/common/自建区域网代理.md
+++ b/common/自建区域网代理.md
@@ -1,11 +1,24 @@
-## 下载安装代理软件 privoxy
+## 区域网自建
 
-https://www.privoxy.org/user-manual/quickstart.html
 
-## 启动服务 
+
+## privoxy 
+
+- 下载：https://www.privoxy.org/user-manual/quickstart.html
 
 - 默认端口 8118
 - 如果要区域网或者公网，要讲配置文件中listen-address地址 改成 0.0.0.0  8118
 
 ## 别的电脑或者软件配置这个代理即可走 安装了代理软件电脑所在的网络IP
 
+
+## shadowsocks
+
+```
+  docker run -d --name ss-server --network=host shadowsocks/shadowsocks-libev ss-server -s 0.0.0.0 -p 8388 -k "123456789&" -m aes-256-gcm
+
+   <!-- 本地连接 -->
+   docker run -d --name ss-local --network=host shadowsocks/shadowsocks-libev ss-local -s 127.0.0.1 -p 8388 -l 1080 -k "123456789&" -m aes-256-gcm
+ <!-- 本地测试 -->
+  curl --socks5 127.0.0.1:1080 http://httpbin.org/ip
+```
