--- a/go/基础知识.md
+++ b/go/基础知识.md
@@ -1,8 +1,9 @@
 
 ## 依赖管理
-> go mmod tidy
->引用项目需要的依赖增加到go.mod文件。
->去掉go.mod文件中项目不需要的依赖。
+
+> - go mod tidy
+> - 引用项目需要的依赖增加到go.mod文件。
+> - 去掉go.mod文件中项目不需要的依赖。
 
 ## 依赖下载加速
 > go env -w GOPROXY=https://goproxy.cn,direct
@@ -11,10 +12,10 @@ GOPATH默认在C盘 可以配置环境便令改变到别的位置
 
 ## 项目初始化
 
-> go mod init <项目名>
-> go mod tidy 项目依赖下载
-> 启动  go run main.go
-> 打包  go build
+> - go mod init <项目名>
+> - go mod tidy 项目依赖下载
+> - 启动  go run main.go
+> - 打包  go build
 
 
 ## 常量
