--- a/common/常见应用容器安装.md
+++ b/common/常见应用容器安装.md
@@ -279,4 +279,51 @@ docker run \
 ```
 
 
+## pgsql
+
+> docker pull pgvector/pgvector:0.8.1-pg17
+> docker pull --platform=arm64 pgvector/pgvector:0.8.1-pg17 
+
+```yaml
+
+services:
+  pg:
+    image: pgvector/pgvector:0.8.1-pg17 # docker hub
+    container_name: pg-prod
+    restart: always
+    ports:
+      - 15432:5432
+    environment:
+      # 这里的配置只有首次运行生效。修改后，重启镜像是不会生效的。需要把持久化数据删除再重启，才有效果
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=123456
+      - POSTGRES_DB=postgres
+      - TZ=Asia/Shanghai
+    volumes:
+      - ./pg/data:/var/lib/postgresql/data
+
+
+-----------------------------版本2  arm上可解决 账户密码认证失败异常----------------------------
+
+services:
+  pg:
+    image: pgvector/pgvector:0.8.1-pg17 # docker hub
+    container_name: pg-prod
+    restart: always
+    ports:
+      - 15432:5432
+    environment:
+      # 这里的配置只有首次运行生效。修改后，重启镜像是不会生效的。需要把持久化数据删除再重启，才有效果
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=123456
+      - POSTGRES_DB=postgres
+      - TZ=Asia/Shanghai
+      - POSTGRES_HOST_AUTH_METHOD=md5
+      - PGDATA=/var/lib/postgresql/data/pgdata
+    volumes:
+      - ./pg/data:/var/lib/postgresql/data/pgdata
+```
+
+
+
 
